新增範例程式

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,8 @@
 server:
   port: 6620
 
-tradevan:
-  mq:
-    ip:
-    port:
-    username:
-    secret:
+spring:
+  rabbitmq:
+    username: guest
+    password: guest
+    addresses: 127.0.0.1:5672
